--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/greenplace-react/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greenplace</title>
     <link
@@ -13,8 +13,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <script type="module" crossorigin src="/greenplace-react/assets/index.9c4e2a81.js"></script>
-    <link rel="stylesheet" href="/greenplace-react/assets/index.5062ac19.css">
+    <script type="module" crossorigin src="./assets/index.c612c613.js"></script>
+    <link rel="stylesheet" href="./assets/index.5062ac19.css">
   </head>
   <body>
     <div id="root"></div>
